# el-professor

./: .env.local.example  .eslint.config.js  .gitignore  .prettierignore  README.md  el_professor.py  el_professor_ui.py  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.streamlit/: config.toml
agent/: mcp_agent.py  tracker.py
configs/: gemini_model.json  mcp_server.json
src/app/: globals.css  layout.tsx  page.tsx  settings.json
src/app/api/chat/: route.ts
src/app/api/chat/message/: route.ts
src/app/api/chat/models/: route.ts
src/app/api/chat/status/: route.ts
src/app/api/image/generate/: route.ts
src/app/api/test-mcp/: route.ts
src/app/backend/application/dto/: ChatRequest.dto.ts  ImageGeneration.dto.ts
src/app/backend/application/use-cases/: GenerateImage.usecase.ts  GetAvailableModels.usecase.ts  GetMCPStatus.usecase.ts  SendChatMessage.usecase.ts
src/app/backend/controllers/: chat-controller.ts
src/app/backend/domain/entities/: ChatMessage.entity.ts
src/app/backend/domain/repositories/: IAIRepository.ts  IMCPRepository.ts
src/app/backend/services/: ai-service.ts  mcp-service.ts
src/app/chat/: page.tsx
src/app/frontend/components/: ChatSettings.tsx  ImageGenerator.tsx  ModelSelector.component.tsx  ModelSelector.tsx
src/app/frontend/hooks/: use-chat.ts  use-image-generation.ts  useChat.hook.ts  useMcpStatus.hook.ts  useModels.hook.ts
src/app/frontend/services/: chat-service.ts  imageService.ts
src/app/image/: page.tsx
utils/: loader.py  logger.py
(+9 files in other folders)
